WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148815
column-rule-style: outset/inset doesn't work
https://bugs.webkit.org/show_bug.cgi?id=148815
Summary
column-rule-style: outset/inset doesn't work
Ryosuke Niwa
Reported
2015-09-04 13:01:34 PDT
column-rule-style: outset/inset doesn't seem to work according to the newly imported tests: imported/w3c/css/css-multicol-1/multicol-rule-style-outset-001.xht imported/w3c/css/css-multicol-1/multicol-rule-style-inset-001.xht
Attachments
Patch
(5.64 KB, patch)
2015-09-16 15:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2015-09-04 13:02:35 PDT
<
rdar://problem/22582644
>
alan
Comment 2
2015-09-16 11:44:00 PDT
Outset seems to be painted properly. However the reference test seems somewhat odd with display: table and border collapsing on. (which produces the double stripes). I am not sure what the intention was with this reference setup.
alan
Comment 3
2015-09-16 11:47:50 PDT
(In reply to
comment #2
)
> Outset seems to be painted properly. However the reference test seems > somewhat odd with display: table and border collapsing on. (which produces > the double stripes). > I am not sure what the intention was with this reference setup.
Oh, it's because of this: "'border-style' values of column-rule are interpreted as in the collapsing border model in which case 'inset' value is drawn the same as 'ridge'. "
alan
Comment 4
2015-09-16 15:13:49 PDT
Created
attachment 261331
[details]
Patch
alan
Comment 5
2015-09-16 15:14:04 PDT
***
Bug 148811
has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 6
2015-09-17 08:56:02 PDT
Comment on
attachment 261331
[details]
Patch r=me
WebKit Commit Bot
Comment 7
2015-09-17 10:03:42 PDT
Comment on
attachment 261331
[details]
Patch Clearing flags on attachment: 261331 Committed
r189916
: <
http://trac.webkit.org/changeset/189916
>
WebKit Commit Bot
Comment 8
2015-09-17 10:03:48 PDT
All reviewed patches have been landed. Closing bug.
Michael Catanzaro
Comment 9
2016-01-06 17:36:09 PST
These tests: imported/w3c/css/css-multicol-1/multicol-rule-inset-000.xht [ ImageOnlyFailure ] imported/w3c/css/css-multicol-1/multicol-rule-outset-000.xht [ ImageOnlyFailure ] Are still failing on the GTK port, see
bug #152823
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug