column-rule-style: outset/inset doesn't work https://bugs.webkit.org/show_bug.cgi?id=148815 Source/WebCore:

<rdar://problem/22582644>

Reviewed by David Hyatt.

https://drafts.csswg.org/css-multicol-1/#crs
The <‘border-style’> values are interpreted as in the collapsing border model.

Unskipped 4 multicolumn tests,

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::paintColumnRules):
* rendering/RenderTableCell.cpp:
(WebCore::collapsedBorderStyle): Deleted.
* rendering/style/RenderStyle.h:
(WebCore::collapsedBorderStyle):

LayoutTests:

Reviewed by David Hyatt.

https://drafts.csswg.org/css-multicol-1/#crs
The <‘border-style’> values are interpreted as in the collapsing border model.

* TestExpectations:


Canonical link: https://commits.webkit.org/167362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189916 268f45cc-cd09-0410-ab3c-d52691b4dbfc